# Compute-Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md
include/: ModelLoaderBVHBuilder.h  OBJ_Loader.h  RayTracingStructs.h  SSBO.h  shader.h
resources/: compute.glsl  rng.glsl  shader.frag  shader.vert
src/: SSBO.cpp  main.cpp  shader.cpp
